--- a/puma-repository-code/trunk/EDFplus engine/Example_Programs/Test Function Generator/gui.lfm
+++ b/puma-repository-code/trunk/EDFplus engine/Example_Programs/Test Function Generator/gui.lfm
@@ -109,6 +109,7 @@ object MainForm: TMainForm
       'Sawtooth Wave (Ramp)'
       'Simulated ECG'
     )
+    OnChange = FunctionComboBoxChange
     TabOrder = 2
     Text = 'Function'
   end
@@ -137,10 +138,11 @@ object MainForm: TMainForm
     Increment = 0.1
     MaxValue = 100
     MinValue = 0.1
+    OnChange = FreqSpinEditChange
     TabOrder = 3
     Value = 1
   end
-  object FreqSpinEdit1: TFloatSpinEdit
+  object AmpSpinEdit: TFloatSpinEdit
     Left = 400
     Height = 16
     Top = 61
@@ -149,17 +151,20 @@ object MainForm: TMainForm
     Increment = 0.1
     MaxValue = 100
     MinValue = 0
+    OnChange = AmpSpinEditChange
     TabOrder = 4
     Value = 1
   end
-  object DurEdit: TSpinEdit
+  object DurSpinEdit: TSpinEdit
     Left = 520
     Height = 16
     Top = 61
     Width = 65
+    MaxValue = 3600
     MinValue = 1
+    OnChange = DurSpinEditChange
     TabOrder = 5
-    Value = 10
+    Value = 60
   end
   object SecLabel: TLabel
     Left = 592
