--- a/puma-repository-code/trunk/EDFplus engine/Example_Programs/Test Function Generator/gui.lfm
+++ b/puma-repository-code/trunk/EDFplus engine/Example_Programs/Test Function Generator/gui.lfm
@@ -4,12 +4,12 @@ object MainForm: TMainForm
   Top = 172
   Width = 814
   Caption = 'Test Function Generator for EDF Engine'
-  ClientHeight = 394
+  ClientHeight = 374
   ClientWidth = 814
   Color = clWhite
   Menu = MainMenu1
   OnCreate = FormCreate
-  LCLVersion = '1.8.2.0'
+  LCLVersion = '1.8.0.6'
   object ToolBar1: TToolBar
     Left = 0
     Height = 26
@@ -44,6 +44,7 @@ object MainForm: TMainForm
       Top = 2
       Caption = 'SaveButton'
       ImageIndex = 2
+      OnClick = SaveButtonClick
       ParentShowHint = False
       ShowHint = True
     end
@@ -64,22 +65,18 @@ object MainForm: TMainForm
     Width = 781
     AxisList = <    
       item
-        Marks.LabelBrush.Style = bsClear
         Minors = <>
         Title.LabelFont.Orientation = 900
-        Title.LabelBrush.Style = bsClear
       end    
       item
         Intervals.MaxLength = 100
         Alignment = calBottom
-        Marks.LabelBrush.Style = bsClear
         Minors = <>
         Range.Max = 10
         Range.UseMax = True
         Range.UseMin = True
         Title.Visible = True
         Title.Caption = 't'
-        Title.LabelBrush.Style = bsClear
       end>
     BackColor = clWhite
     Foot.Brush.Color = clBtnFace
@@ -103,11 +100,11 @@ object MainForm: TMainForm
     Height = 21
     Top = 57
     Width = 208
-    ItemHeight = 0
+    ItemHeight = 13
     Items.Strings = (
       'Sine Wave'
       'Square Wave'
-      'Sawtooth Wave (Ramp)'
+      'Sawtooth Wave'
       'Simulated ECG'
     )
     OnChange = FunctionComboBoxChange
@@ -116,23 +113,23 @@ object MainForm: TMainForm
   end
   object HzLabel: TLabel
     Left = 535
-    Height = 16
+    Height = 13
     Top = 61
-    Width = 17
+    Width = 13
     Caption = 'Hz'
     ParentColor = False
   end
   object AULabel: TLabel
     Left = 647
-    Height = 16
+    Height = 13
     Top = 62
-    Width = 18
+    Width = 15
     Caption = 'AU'
     ParentColor = False
   end
   object FreqSpinEdit: TFloatSpinEdit
     Left = 463
-    Height = 16
+    Height = 21
     Top = 61
     Width = 65
     DecimalPlaces = 1
@@ -145,7 +142,7 @@ object MainForm: TMainForm
   end
   object AmpSpinEdit: TFloatSpinEdit
     Left = 575
-    Height = 16
+    Height = 21
     Top = 61
     Width = 65
     DecimalPlaces = 1
@@ -158,7 +155,7 @@ object MainForm: TMainForm
   end
   object DurSpinEdit: TSpinEdit
     Left = 695
-    Height = 16
+    Height = 21
     Top = 61
     Width = 65
     MaxValue = 3600
@@ -169,17 +166,17 @@ object MainForm: TMainForm
   end
   object SecLabel: TLabel
     Left = 767
-    Height = 16
+    Height = 13
     Top = 61
-    Width = 21
+    Width = 17
     Caption = 'sec'
     ParentColor = False
   end
   object FreqLabel: TLabel
     Left = 463
-    Height = 13
+    Height = 9
     Top = 40
-    Width = 58
+    Width = 38
     Caption = 'Frequency:'
     Font.Height = 11
     ParentColor = False
@@ -187,9 +184,9 @@ object MainForm: TMainForm
   end
   object AmpLabel: TLabel
     Left = 575
-    Height = 13
+    Height = 9
     Top = 40
-    Width = 59
+    Width = 36
     Caption = 'Amplitude:'
     Font.Height = 11
     ParentColor = False
@@ -197,9 +194,9 @@ object MainForm: TMainForm
   end
   object DurLabel: TLabel
     Left = 695
-    Height = 13
+    Height = 9
     Top = 40
-    Width = 50
+    Width = 31
     Caption = 'Duration:'
     Font.Height = 11
     ParentColor = False
@@ -461,5 +458,9 @@ object MainForm: TMainForm
       6EFF6B706EFF6B706EFF6B706EFF6B706EFF6B706EFF6B706EFF6B706EFF6B70
       6EFF6B706EFF6B706EFF6B706E00
     }
+  end
+  object SaveDialog1: TSaveDialog
+    left = 704
+    top = 120
   end
 end
