EDF Engine: Adding additional features to Test Function Generator and EDF Inspector demo appls.

--- a/puma-repository-code/trunk/EDFplus engine/Example_Programs/Test Function Generator/gui.lfm
+++ b/puma-repository-code/trunk/EDFplus engine/Example_Programs/Test Function Generator/gui.lfm
@@ -462,6 +462,10 @@ object MainForm: TMainForm
     }
   end
   object SaveDialog1: TSaveDialog
+    Title = 'Safe file as...'
+    DefaultExt = '.edf'
+    Filter = 'European Data Format (EDF)|*.edf|All Files|*.*'
+    Options = [ofOverwritePrompt, ofEnableSizing, ofViewDetail]
     left = 704
     top = 120
   end
