EDFPlus Engine: Minor improvements of GUI for EDF Inspector demo app.

--- a/puma-repository-code/trunk/EDFplus engine/Example_Programs/EDF Inspector/gui.lfm
+++ b/puma-repository-code/trunk/EDFplus engine/Example_Programs/EDF Inspector/gui.lfm
@@ -8,7 +8,7 @@ object MainForm: TMainForm
   ClientWidth = 812
   Menu = MainMenu1
   OnCreate = FormCreate
-  LCLVersion = '1.8.2.0'
+  LCLVersion = '1.8.4.0'
   object HeaderRecordValueListEditor: TValueListEditor
     Left = 8
     Height = 432
@@ -84,6 +84,29 @@ object MainForm: TMainForm
       ImageIndex = 3
       ParentShowHint = False
       ShowHint = True
+    end
+    object Divider1: TToolButton
+      Left = 93
+      Height = 22
+      Top = 2
+      Caption = 'Divider1'
+      Style = tbsSeparator
+    end
+    object RecordsButton: TToolButton
+      Left = 101
+      Hint = 'Show Data Records'
+      Top = 2
+      Caption = 'RecordsButton'
+      ImageIndex = 4
+      OnClick = RecordsButtonClick
+    end
+    object TimeSeriesPlotButton: TToolButton
+      Left = 124
+      Hint = 'Show Time Series Plot'
+      Top = 2
+      Caption = 'TimeSeriesPlotButton'
+      ImageIndex = 5
+      OnClick = TimeSeriesPlotButtonClick
     end
   end
   object StatusBar1: TStatusBar
@@ -200,7 +223,7 @@ object MainForm: TMainForm
     left = 768
     top = 88
     Bitmap = {
-      4C690400000010000000100000009E9E9EA3818181FF818181FF818181FF8181
+      4C690600000010000000100000009E9E9EA3818181FF818181FF818181FF8181
       81FF818181FF818181FF818181FF818181FF7C8C8CFF729F9FFF6AAEAFFF36E4
       ED8A09F3FF4502F3FF0F00000000818181FFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
       FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF9BEEF2FF69F0F7FF4DF2FAFF46EF
@@ -328,7 +351,71 @@ object MainForm: TMainForm
       FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FFFFFF
       FFFFFFFFFFFFFFFFFFFF6B706EFF6B706E006B706EFF6B706EFF6B706EFF6B70
       6EFF6B706EFF6B706EFF6B706EFF6B706EFF6B706EFF6B706EFF6B706EFF6B70
-      6EFF6B706EFF6B706EFF6B706E00
+      6EFF6B706EFF6B706EFF6B706E00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00A971516BDDB18DF4DCA77BFFDCA67AFFDAA4
+      7AFFD8A279FFD5A076FFD49E75FFD29D73FFCF9A72FFCE9970FFCB966FFFC994
+      6CFFC49A7AF4A971516BFFFFFF00DDAC85FDE8B992FFE8B992FFE8B992FFE8B9
+      92FFE8B992FFE8B992FFE8B992FFE8B992FFE8B992FFE8B992FFE8B992FFE8B9
+      92FFE8B992FFC1906FFDFFFFFF00DCA77BFFDCA77BFFDCA77BFFDCA77BFFDCA7
+      7BFFDCA77BFFDCA77BFFDCA77BFFDCA77BFFDCA77BFFDCA77BFFDCA77BFFDCA7
+      7BFFDCA77BFFC08B66FFFFFFFF00DBA47AFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFBD8763FFFFFFFF00D9A379FFFFFFFFFFCCCCCCFFCACACAFFC6C6
+      C6FFFEFAF7FFBDBDBDFFBBBBBBFFB7B7B7FFFEFAF7FFB1B1B1FFB0B0B0FFADAD
+      ADFFFFFFFFFFBA8560FFFFFFFF00D8A279FFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFB7815EFFFFFFFF00D5A076FFFFFFFFFFC8C8C8FFC6C6C6FFC0C0
+      C0FFFEFAF7FFBABABAFFB8B8B8FFB2B2B2FFFEFAF7FFA9A9A9FFA7A7A7FFA5A5
+      A5FFFFFFFFFFB57E5CFFFFFFFF00D49E75FFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFB27C5AFFFFFFFF00D19C73FFFFFFFFFFC2C2C2FFC0C0C0FFB9B9
+      B9FFFEFAF7FFB5B5B5FFB3B3B3FFABABABFFFEFAF7FFA2A2A2FF9E9E9EFF9B9B
+      9BFFFFFFFFFFB07A58FFFFFFFF00CC976FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFAC7554FFFFFFFF00CA946EFFFFFFFFFFBEBEBEFFBABABAFFB2B2
+      B2FFFEFAF7FFB2B2B2FFAEAEAEFFA5A5A5FFFEFAF7FF989898FF959595FF9191
+      91FFFFFFFFFFAA7353FFFFFFFF00C8926CFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFA97251FFFFFFFF00A97151A9C38E68FFC08B66FFBE8864FFBB85
+      61FFB9835FFFB47E5CFFB27C5AFFB17B58FFAE7957FFAD7656FFAB7554FFA973
+      53FFA97151FFA97151A9FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00C67634FFDD975B54FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00C67634FFC67D3F66DD924FA7FFFF
+      FF00FFFFFF00FFFFFF005A58EF8A5A58EFE05957EFD35957EF5EFFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00C57534FFE0873833DE893FFDDE8C
+      4109FFFFFF00504DF1C3524FF2FA524FF2CA5351F0DD5351F0FB5351F0E25351
+      F022FFFFFF00FFFFFF00FFFFFF00FFFFFF00C47434FFE2802603E07F2CF9E081
+      30B6413EF5874340F4FE4643F33CFFFFFF00FFFFFF004946F3224B48F1F1504A
+      EEF6E0934B80FFFFFF00FFFFFF00FFFFFF00C37333FF8047221DE1761B8AAF60
+      67FA3832F5F73936F695FFFFFF00FFFFFF00FFFFFF00E07F338DDF8137FDDF82
+      39FBDF863CF9DF883EFEFFFFFF00FFFFFF00C27332FFFFFFFF00FFFFFF00392A
+      EBFE4531E1F9FFFFFF00FFFFFF00FFFFFF00E06F20A8DE7224FBDE73279F3532
+      F7253633F6FF885BA697FFFFFF00FFFFFF00C07232FFFFFFFF001A16FBA51C19
+      F9FBBA4E3DF7E0610A92E1620D03DF6210B8DE6111F8DD62157EFFFFFF00FFFF
+      FF002D2AF9C02E2BF7F0FFFFFF00FFFFFF00BE7130FF50307B2F110DFDFE120E
+      FC86E0580084E05700FFE05702FDE05703FEDF560657FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF002421F9FAFFFFFF00FFFFFF00BD6F30FF0501FF4F0602FFDCFFFF
+      FF00FFFFFF00FFFFFF00DC50007740A24A973CA44BCC3AA449CD37A34657FFFF
+      FF00FFFFFF001B17FBB0FFFFFF00FFFFFF00BB6E2FFF0400F9540400FB17FFFF
+      FF00FFFFFF0039994A4A399948E8379A48E0389B46AD369D45BE359F44F433A0
+      425FFFFFFF00110DFD1AFFFFFF00FFFFFF00B96D2EFF28159C40FFFFFF00FFFF
+      FF0032884196328941F1318A40A2318C400CFFFFFF00FFFFFF00318F40882F92
+      3EEFFFFFFF00FFFFFF00FFFFFF00FFFFFF00B76B2DFF2C7439192B7538992D75
+      37E22B7538ED2C763868FFFFFF00FFFFFF00FFFFFF00FFFFFF002B7F38082C82
+      38DE2B843693FFFFFF00FFFFFF00FFFFFF00B66A2DFF2968324F276831463950
+      274527683109FFFFFF004828131DFFFFFF00FFFFFF004225121DFFFFFF00276F
+      321A2C5A28682873350CFFFFFF00FFFFFF00B4692BFFB3682BFFB2682AFFB168
+      2AFFB0662AFFAF662AFFAF6629FFAE6529FFAE6528FFAD6428FFAD6428FFAC64
+      28FFAB6328FFAB6328FFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00
     }
   end
   object EDFFileOpenDialog: TOpenDialog
