--- a/trunk/EDFplus engine/Example_Programs/Test Function Generator/gui.lfm
+++ b/trunk/EDFplus engine/Example_Programs/Test Function Generator/gui.lfm
@@ -4,14 +4,15 @@ object MainForm: TMainForm
   Top = 172
   Width = 780
   Caption = 'Test Function Generator for EDF Engine'
-  ClientHeight = 380
+  ClientHeight = 400
   ClientWidth = 780
   Color = clWhite
   Constraints.MinHeight = 400
   Constraints.MinWidth = 780
   Menu = MainMenu1
   OnCreate = FormCreate
-  LCLVersion = '1.8.0.6'
+  OnPaint = FormPaint
+  LCLVersion = '2.0.8.0'
   object ToolBar1: TToolBar
     Left = 0
     Height = 26
@@ -62,35 +63,40 @@ object MainForm: TMainForm
   end
   object Chart1: TChart
     Left = 16
-    Height = 283
+    Height = 303
     Top = 88
     Width = 747
     AxisList = <    
       item
+        Marks.LabelBrush.Style = bsClear
         Minors = <>
         Title.LabelFont.Orientation = 900
+        Title.LabelBrush.Style = bsClear
       end    
       item
         Intervals.MaxLength = 100
         Alignment = calBottom
+        Marks.LabelBrush.Style = bsClear
         Minors = <>
         Range.Max = 10
         Range.UseMax = True
         Range.UseMin = True
         Title.Visible = True
         Title.Caption = 't'
+        Title.LabelBrush.Style = bsClear
       end>
     BackColor = clWhite
     Foot.Brush.Color = clBtnFace
     Foot.Font.Color = clBlue
     Title.Brush.Color = clNone
+    Title.Brush.Style = bsClear
     Title.Font.Color = clBlue
     Title.Text.Strings = (
       '1'
     )
     Title.Visible = True
     Anchors = [akTop, akLeft, akRight, akBottom]
-    Color = clWhite
+    ParentColor = True
     object ySeries: TLineSeries
       Title = 'y'
       LinePen.Color = clGreen
@@ -99,11 +105,11 @@ object MainForm: TMainForm
   end
   object FunctionComboBox: TComboBox
     Left = 191
-    Height = 21
+    Height = 20
     Hint = 'Select type of function here.'
     Top = 44
     Width = 208
-    ItemHeight = 13
+    ItemHeight = 19
     Items.Strings = (
       'Sine Wave'
       'Square Wave'
@@ -118,17 +124,17 @@ object MainForm: TMainForm
   end
   object HzLabel: TLabel
     Left = 494
-    Height = 13
+    Height = 16
     Top = 48
-    Width = 13
+    Width = 17
     Caption = 'Hz'
     ParentColor = False
   end
   object AULabel: TLabel
     Left = 606
-    Height = 13
+    Height = 16
     Top = 49
-    Width = 15
+    Width = 18
     Caption = 'AU'
     ParentColor = False
   end
@@ -139,7 +145,6 @@ object MainForm: TMainForm
     Width = 65
     DecimalPlaces = 1
     Increment = 0.1
-    MaxValue = 100
     MinValue = 0.1
     OnChange = FreqSpinEditChange
     TabOrder = 3
@@ -152,7 +157,6 @@ object MainForm: TMainForm
     Width = 65
     DecimalPlaces = 1
     Increment = 0.1
-    MaxValue = 100
     MinValue = 0
     OnChange = AmpSpinEditChange
     TabOrder = 4
@@ -171,17 +175,17 @@ object MainForm: TMainForm
   end
   object SecLabel: TLabel
     Left = 726
-    Height = 13
+    Height = 16
     Top = 48
-    Width = 17
+    Width = 21
     Caption = 'sec'
     ParentColor = False
   end
   object FreqLabel: TLabel
     Left = 422
-    Height = 12
+    Height = 15
     Top = 27
-    Width = 47
+    Width = 63
     Caption = 'Frequency:'
     Font.Height = 12
     ParentColor = False
@@ -189,9 +193,9 @@ object MainForm: TMainForm
   end
   object AmpLabel: TLabel
     Left = 534
-    Height = 12
+    Height = 15
     Top = 27
-    Width = 45
+    Width = 61
     Caption = 'Amplitude:'
     Font.Height = 12
     ParentColor = False
@@ -199,9 +203,9 @@ object MainForm: TMainForm
   end
   object DurLabel: TLabel
     Left = 695
-    Height = 12
+    Height = 15
     Top = 27
-    Width = 38
+    Width = 52
     Caption = 'Duration:'
     Font.Height = 12
     ParentColor = False
