--- a/EDFplus engine/Example_Programs/EDF Inspector/datarecordgrid.lfm
+++ b/EDFplus engine/Example_Programs/EDF Inspector/datarecordgrid.lfm
@@ -6,12 +6,14 @@ object ValuesGridForm: TValuesGridForm
   Caption = 'Data Records'
   ClientHeight = 342
   ClientWidth = 632
-  LCLVersion = '1.8.0.6'
+  OnCreate = FormCreate
+  OnPaint = FormPaint
+  LCLVersion = '2.0.8.0'
   Visible = True
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 23
-    Top = 319
+    Height = 18
+    Top = 324
     Width = 632
     Panels = <>
   end
@@ -36,14 +38,14 @@ object ValuesGridForm: TValuesGridForm
     object TabSheet1: TTabSheet
       Hint = 'Raw data from digitizer'
       Caption = 'Raw Data'
-      ClientHeight = 294
-      ClientWidth = 624
+      ClientHeight = 290
+      ClientWidth = 626
       object RawDataGrid: TStringGrid
         Cursor = crCross
         Left = 0
-        Height = 294
+        Height = 290
         Top = 0
-        Width = 622
+        Width = 624
         AlternateColor = clSkyBlue
         Anchors = [akTop, akLeft, akRight, akBottom]
         AutoEdit = False
