Fixing a bug that caused a crash under certain circumstances on macOS Cocoa.

--- a/EDFplus engine/Example_Programs/Test Function Generator/gui.lfm
+++ b/EDFplus engine/Example_Programs/Test Function Generator/gui.lfm
@@ -113,7 +113,7 @@ object MainForm: TMainForm
     Items.Strings = (
       'Sine Wave'
       'Square Wave'
-      'Sawtooth Wave'
+      'Sawtooth Wave (ramp)'
       'Simulated ECG'
     )
     OnChange = FunctionComboBoxChange
