--- a/EDFplus engine/Example_Programs/Test Function Generator/gui.lfm
+++ b/EDFplus engine/Example_Programs/Test Function Generator/gui.lfm
@@ -518,7 +518,7 @@ object MainForm: TMainForm
   object SaveDialog1: TSaveDialog
     Title = 'Safe file as...'
     DefaultExt = '.edf'
-    Filter = 'European Data Format (EDF)|*.edf|All Files|*.*'
+    Filter = 'European Data Format (EDF), standard mode|*.edf|European Data Format (EDF), large file mode|*.edf|All Files|*.*'
     Options = [ofOverwritePrompt, ofEnableSizing, ofViewDetail]
     left = 704
     top = 120
