Fixing a bug in the EDF inspector causing a crash in certain scenarios.

--- a/EDFplus engine/Example_Programs/EDF Inspector/plot.lfm
+++ b/EDFplus engine/Example_Programs/EDF Inspector/plot.lfm
@@ -142,6 +142,7 @@ object PlotForm: TPlotForm
     Height = 23
     Top = 178
     Width = 96
+    MaxValue = 100000
     OnChange = SpinEdit1Change
     TabOrder = 6
   end
